fix: 异常处理优先级提升 & 活动记录查询补全地区字段
- GlobalExceptionHandler: @Order(HIGHEST_PRECEDENCE) 优先于其他拦截器；SocketException 纳入客户端断连处理
- MobileProfileService: List.of → Arrays.asList 修复可变性问题
- MobileProfileMapper.xml: 活动记录查询补全 district 字段